[gd_scene load_steps=8 format=3 uid="uid://b4ptmdxybnx05"]

[ext_resource type="FontFile" uid="uid://dd7hobci3hb1d" path="res://assets/Kenney Bold.ttf" id="1_0trmc"]
[ext_resource type="Script" path="res://scenes/hud.gd" id="1_whxhy"]
[ext_resource type="Texture2D" uid="uid://ctv3yfmhd3tpo" path="res://assets/minus.png" id="4_ayy0b"]
[ext_resource type="Texture2D" uid="uid://c55yidfkdxntg" path="res://assets/plus.png" id="5_chfg1"]

[sub_resource type="LabelSettings" id="LabelSettings_jfmes"]
font = ExtResource("1_0trmc")
font_size = 24
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_h4g34"]
font = ExtResource("1_0trmc")
font_size = 32
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_esavg"]
font = ExtResource("1_0trmc")
font_size = 24
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_whxhy")

[node name="HBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="Time" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = SubResource("LabelSettings_jfmes")
horizontal_alignment = 2

[node name="Score" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_jfmes")
horizontal_alignment = 2

[node name="GameTitle" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "COIN DASH!"
label_settings = SubResource("LabelSettings_h4g34")

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_0trmc")
text = "Start"

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -92.0
offset_right = 77.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Difficult" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "1"
label_settings = SubResource("LabelSettings_esavg")

[node name="Minus" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("4_ayy0b")

[node name="Plus" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("5_chfg1")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
[connection signal="pressed" from="MarginContainer/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="MarginContainer/Plus" to="." method="_on_plus_pressed"]
